dataset1235/2025-2/1153765216/users/896391410/executions/2747719322_3455942218.log
== SUBMISSION (2025-08-19 19:23:17)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
preco_jogo = float(input(" "))
valor_disponivel = float(input(" "))

# Calculo do valor a ser pago, incluindo o frete:
custo_total = preco_jogo * 8 + 45
saldo = valor_disponivel - custo_total

# Impressao do valor total e do saldo:
print(f"{total:.1f}")
print(f"{saldo:.1f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.1f}")
             ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.1f}")
             ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.1f}")
             ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.1f}")
             ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.1f}")
             ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.1f}")
             ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:21:37)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
preco_jogo = float(input(" "))
valor_dispinivel = float(input(" "))

# Calculo do valor a ser pago, incluindo o frete:
custo_total = preco_jogo * 8 + 45
saldo = valor_disponivel - custo_total

# Impressao do valor total e do saldo:
print(f"{total:.1f}")
print(f"{saldo:.1f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:21:16)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
preco_jogo = float(input(" "))
valor_dispinivel = float(input(" "))

# Calculo do valor a ser pago, incluindo o frete:
custo_total = preco_jogo * 8 + 45
saldo = valor_disponivel - custo_total

# Impressao do valor total e do saldo:
print(f"{total:.1f}")
print(f"{saldo:.1f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:20:54)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
preco_jogo = float(input(" "))
valor_dispinivel = float(input(" "))

# Calculo do valor a ser pago, incluindo o frete:
custo_total = preco_jogo * 8 + 45
saldo = valor_disponivel - Custo_total

# Impressao do valor total e do saldo:
print(f"{total:.1f}")
print(f"{saldo:.1f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - Custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - Custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - Custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - Custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - Custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - Custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:23:52)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
preco_jogo = float(input(" "))
valor_disponivel = float(input(" "))

# Calculo do valor a ser pago, incluindo o frete:
custo_total = preco_jogo * 8 + 45
saldo = valor_disponivel - custo_total

# Impressao do valor total e do saldo:
print(f"{custo_total:.1f}")
print(f"{saldo:.1f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:20:13)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
preco_jogo = float(input(" "))
valor_dispinivel = float(input(" "))

# Calculo do valor a ser pago, incluindo o frete:
total = preco_jogo * + 45
saldo = valor_disponivel - total

# Impressao do valor total e do saldo:
print(f"{total:.1f}")
print(f"{saldo:.1f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:21:35)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
preco_jogo = float(input(" "))
valor_dispinivel = float(input(" "))

# Calculo do valor a ser pago, incluindo o frete:
custo_total = preco_jogo * 8 + 45
saldo = valor_disponivel - custo_total

# Impressao do valor total e do saldo:
print(f"{total:.1f}")
print(f"{saldo:.1f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:21:32)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
preco_jogo = float(input(" "))
valor_dispinivel = float(input(" "))

# Calculo do valor a ser pago, incluindo o frete:
custo_total = preco_jogo * 8 + 45
saldo = valor_disponivel - custo_total

# Impressao do valor total e do saldo:
print(f"{total:.1f}")
print(f"{saldo:.1f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:21:33)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
preco_jogo = float(input(" "))
valor_dispinivel = float(input(" "))

# Calculo do valor a ser pago, incluindo o frete:
custo_total = preco_jogo * 8 + 45
saldo = valor_disponivel - custo_total

# Impressao do valor total e do saldo:
print(f"{total:.1f}")
print(f"{saldo:.1f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disponivel - custo_total
            ^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel' is not defined. Did you mean: 'valor_dispinivel'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
